Fixed overflow on pages with long links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,6 +1081,7 @@ a.blog-card span {
 }
 
 #privacy .paper>.text {
+	word-break: break-word;
 	font-size: 18px;
 	margin: 0 10px;
 	line-height: 27px;
